crates/parser/tests/snapshots/parser_test__application.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"(foo x y z)\")"
---
App:
  func:
    Var:
      name: foo
      span:
        - 1
        - 4
  args:
    - Var:
        name: x
        span:
          - 5
          - 6
    - Var:
        name: y
        span:
          - 7
          - 8
    - Var:
        name: z
        span:
          - 9
          - 10
  span:
    - 0
    - 11
