crates/parser/tests/snapshots/parser_test__bool_literal.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"true\")"
---
Lit:
  value:
    Bool: true
  span:
    - 0
    - 4
