crates/parser/tests/snapshots/parser_test__comparison_op.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"(== x y)\")"
---
BinaryOp:
  op: Eq
  lhs:
    Var:
      name: x
      span:
        - 4
        - 5
  rhs:
    Var:
      name: y
      span:
        - 6
        - 7
  span:
    - 0
    - 8
