crates/parser/tests/snapshots/parser_test__complete_program.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(r#\"\n        (type Point (record (x Int) (y Int)))\n        (def add (fn [a b] (+ a b)))\n        (def main (fn [] (let result (add 1 2))))\n        \"#)"
---
decls:
  - DefType:
      name: Point
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 32
                    - 35
            - - y
              - Named:
                  name: Int
                  span:
                    - 40
                    - 43
      deriving: []
      span:
        - 9
        - 46
  - DefFn:
      name: add
      params:
        - name: a
          ty: ~
          span:
            - 69
            - 70
        - name: b
          ty: ~
          span:
            - 71
            - 72
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: a
              span:
                - 77
                - 78
          rhs:
            Var:
              name: b
              span:
                - 79
                - 80
          span:
            - 74
            - 81
      span:
        - 55
        - 83
  - DefFn:
      name: main
      params: []
      constraints: []
      return_type: ~
      body:
        Let:
          name: result
          value:
            App:
              func:
                Var:
                  name: add
                  span:
                    - 122
                    - 125
              args:
                - Lit:
                    value:
                      Int: 1
                    span:
                      - 126
                      - 127
                - Lit:
                    value:
                      Int: 2
                    span:
                      - 128
                      - 129
              span:
                - 121
                - 130
          body: ~
          span:
            - 109
            - 131
      span:
        - 92
        - 133
