crates/parser/tests/snapshots/parser_test__def_fn_simple.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(def add (fn [a b] (+ a b)))\")"
---
decls:
  - DefFn:
      name: add
      params:
        - name: a
          ty: ~
          span:
            - 14
            - 15
        - name: b
          ty: ~
          span:
            - 16
            - 17
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: a
              span:
                - 22
                - 23
          rhs:
            Var:
              name: b
              span:
                - 24
                - 25
          span:
            - 19
            - 26
      span:
        - 0
        - 28
