crates/parser/tests/snapshots/parser_test__def_fn_typed.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(def factorial (fn [n] [Int] Int (if (<= n 1) 1 (* n (factorial (- n 1))))))\")"
---
decls:
  - DefFn:
      name: factorial
      visibility: Private
      params:
        - name: n
          ty:
            Named:
              name: Int
              span:
                - 24
                - 27
          span:
            - 20
            - 21
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 29
            - 32
      body:
        If:
          cond:
            BinaryOp:
              op: Le
              lhs:
                Var:
                  name: n
                  span:
                    - 41
                    - 42
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 43
                    - 44
              span:
                - 37
                - 45
          then_:
            Lit:
              value:
                Int: 1
              span:
                - 46
                - 47
          else_:
            BinaryOp:
              op: Mul
              lhs:
                Var:
                  name: n
                  span:
                    - 51
                    - 52
              rhs:
                App:
                  func:
                    Var:
                      name: factorial
                      span:
                        - 54
                        - 63
                  args:
                    - BinaryOp:
                        op: Sub
                        lhs:
                          Var:
                            name: n
                            span:
                              - 67
                              - 68
                        rhs:
                          Lit:
                            value:
                              Int: 1
                            span:
                              - 69
                              - 70
                        span:
                          - 64
                          - 71
                  span:
                    - 53
                    - 72
              span:
                - 48
                - 73
          span:
            - 33
            - 74
      span:
        - 0
        - 76
